--- a/course_1/gdm_lab_1_1_create_your_own_probability_distribution.ipynb
+++ b/course_1/gdm_lab_1_1_create_your_own_probability_distribution.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/sourav-2023/learning_ai/blob/main/course_1/gdm_lab_1_1_create_your_own_probability_distribution.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "metadata": {
         "id": "_DAsej7XSlYt"
       },
@@ -121,12 +111,12 @@
       ],
       "metadata": {
         "id": "UyTT6C0JhGBs",
+        "outputId": "5ece1666-14fa-484d-94d6-8ae89279d90b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a99f9507-85be-4fa0-af3d-9d82d5637179"
+        }
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -175,7 +165,7 @@
       "metadata": {
         "id": "ZPy-Uxih7Xuz"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -195,7 +185,11 @@
     },
     {
       "metadata": {
-        "id": "icYkPlVair-Q"
+        "id": "icYkPlVair-Q",
+        "outputId": "c394ce76-d257-4068-a34c-166be4de0b37",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -208,8 +202,16 @@
         "# a proper probability distribution.\n",
         "probabilities.test_probabilities(candidate_words, your_mental_model)"
       ],
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ You've set the probabilities successfully. Well done!\n"
+          ]
+        }
+      ],
+      "execution_count": 3
     },
     {
       "metadata": {
@@ -231,7 +233,11 @@
     },
     {
       "metadata": {
-        "id": "JmLQmXVIjgwe"
+        "id": "JmLQmXVIjgwe",
+        "outputId": "5c847bf3-45ac-4399-e69f-0658ca8742f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -239,8 +245,16 @@
         "\n",
         "print(f\"Twinkle twinkle little {chosen_word[0]}.\")"
       ],
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Twinkle twinkle little star.\n"
+          ]
+        }
+      ],
+      "execution_count": 4
     },
     {
       "metadata": {
@@ -280,7 +294,11 @@
     },
     {
       "metadata": {
-        "id": "Urb2zkFM9a2a"
+        "id": "Urb2zkFM9a2a",
+        "outputId": "27932390-9d55-4611-f6c8-94e2eb56268c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -297,14 +315,31 @@
         "\n",
         "# Enter the probabilities for the candidate words to follow the\n",
         "# prompt \"Jide was hungry so she went looking for\".\n",
-        "your_mental_model = []\n",
+        "your_mental_model = [\n",
+        "    0.50,\n",
+        "    0.20,\n",
+        "    0.19,\n",
+        "    0.01,\n",
+        "    0.00,\n",
+        "    0.10,\n",
+        "    0.00,\n",
+        "    0.00\n",
+        "]\n",
         "\n",
         "# This function runs several checks to verify that your_mental_model defines\n",
         "# a proper probability distribution.\n",
         "probabilities.test_probabilities(candidate_words, your_mental_model)"
       ],
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ You've set the probabilities successfully. Well done!\n"
+          ]
+        }
+      ],
+      "execution_count": 15
     },
     {
       "metadata": {
@@ -317,7 +352,11 @@
     },
     {
       "metadata": {
-        "id": "jJD4BndPAAp-"
+        "id": "jJD4BndPAAp-",
+        "outputId": "26d267fb-f1f8-47a1-edd9-8d2539d6b13f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -325,8 +364,16 @@
         "\n",
         "print(f\"Jide was hungry so she went looking for {chosen_word[0]} ...\")"
       ],
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Jide was hungry so she went looking for leftovers ...\n"
+          ]
+        }
+      ],
+      "execution_count": 30
     },
     {
       "metadata": {
@@ -365,7 +412,11 @@
     },
     {
       "metadata": {
-        "id": "s8wmmLbkBXcj"
+        "id": "s8wmmLbkBXcj",
+        "outputId": "df34c7a4-95b5-4ae3-d2a6-d6b1fd38f657",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -382,14 +433,32 @@
         "\n",
         "# Enter the probabilities for the candidate words to follow the\n",
         "# prompt \"Jide was thirsty so she went looking for\".\n",
-        "your_mental_model = []\n",
+        "your_mental_model = [\n",
+        "    0.10,\n",
+        "    0.15,\n",
+        "    0.15,\n",
+        "    0.0,\n",
+        "    0.00,\n",
+        "    0.60,\n",
+        "    0.00,\n",
+        "    0.00\n",
+        "\n",
+        "]\n",
         "\n",
         "# This function runs several checks to verify that your_mental_model defines\n",
         "# a proper probability distribution.\n",
         "probabilities.test_probabilities(candidate_words, your_mental_model)"
       ],
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ You've set the probabilities successfully. Well done!\n"
+          ]
+        }
+      ],
+      "execution_count": 33
     },
     {
       "metadata": {
@@ -402,7 +471,11 @@
     },
     {
       "metadata": {
-        "id": "1S0WN2Y2BjTD"
+        "id": "1S0WN2Y2BjTD",
+        "outputId": "156b4746-c56f-4b73-e28f-46c60904c7d3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -410,8 +483,16 @@
         "\n",
         "print(f\"Jide was thirsty so she went looking for {chosen_word[0]}...\")"
       ],
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Jide was thirsty so she went looking for water...\n"
+          ]
+        }
+      ],
+      "execution_count": 45
     },
     {
       "metadata": {
@@ -483,7 +564,7 @@
         "your_mental_model=[0.2, 0.346, 0.2, 0.09, 0.001, 0.16, 0.002, 0.001]"
       ],
       "outputs": [],
-      "execution_count": null
+      "execution_count": 50
     },
     {
       "cell_type": "markdown",
@@ -504,7 +585,7 @@
         "your_mental_model=[0.05, 0.046, 0.09, 0.05, 0.001, 0.76, 0.002, 0.001]"
       ],
       "outputs": [],
-      "execution_count": null
+      "execution_count": 51
     },
     {
       "cell_type": "markdown",
@@ -525,8 +606,7 @@
         "TbCry1ll6L9g",
         "4NJgcGxO6UDE",
         "AYxczrMh8weO"
-      ],
-      "include_colab_link": true
+      ]
     },
     "kernelspec": {
       "name": "python3",
