--- a/course_1/gdm_lab_1_1_create_your_own_probability_distribution.ipynb
+++ b/course_1/gdm_lab_1_1_create_your_own_probability_distribution.ipynb
@@ -111,12 +111,12 @@
       ],
       "metadata": {
         "id": "UyTT6C0JhGBs",
-        "outputId": "5ece1666-14fa-484d-94d6-8ae89279d90b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "79691f6e-96fe-4365-ebde-77d2e46f0bb3"
       },
-      "execution_count": 1,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -165,7 +165,7 @@
       "metadata": {
         "id": "ZPy-Uxih7Xuz"
       },
-      "execution_count": 2,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -186,10 +186,10 @@
     {
       "metadata": {
         "id": "icYkPlVair-Q",
-        "outputId": "c394ce76-d257-4068-a34c-166be4de0b37",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "46f1a3eb-acab-4baf-945a-2b38310bcfc3"
       },
       "cell_type": "code",
       "source": [
@@ -211,7 +211,7 @@
           ]
         }
       ],
-      "execution_count": 3
+      "execution_count": 13
     },
     {
       "metadata": {
@@ -234,10 +234,10 @@
     {
       "metadata": {
         "id": "JmLQmXVIjgwe",
-        "outputId": "5c847bf3-45ac-4399-e69f-0658ca8742f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8396124a-2b49-4b6a-b27a-61a9a8383b4a"
       },
       "cell_type": "code",
       "source": [
@@ -254,7 +254,7 @@
           ]
         }
       ],
-      "execution_count": 4
+      "execution_count": 14
     },
     {
       "metadata": {
@@ -295,10 +295,10 @@
     {
       "metadata": {
         "id": "Urb2zkFM9a2a",
-        "outputId": "27932390-9d55-4611-f6c8-94e2eb56268c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3a7517dc-d8ee-4557-f6e2-00f8e74831ad"
       },
       "cell_type": "code",
       "source": [
@@ -353,10 +353,10 @@
     {
       "metadata": {
         "id": "jJD4BndPAAp-",
-        "outputId": "26d267fb-f1f8-47a1-edd9-8d2539d6b13f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "45150812-3c38-4db3-a44a-c2f40dcdce59"
       },
       "cell_type": "code",
       "source": [
@@ -369,11 +369,11 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Jide was hungry so she went looking for leftovers ...\n"
+            "Jide was hungry so she went looking for food ...\n"
           ]
         }
       ],
-      "execution_count": 30
+      "execution_count": 16
     },
     {
       "metadata": {
@@ -413,10 +413,10 @@
     {
       "metadata": {
         "id": "s8wmmLbkBXcj",
-        "outputId": "df34c7a4-95b5-4ae3-d2a6-d6b1fd38f657",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b66183a8-18dd-4b05-d0c4-787fb38b8577"
       },
       "cell_type": "code",
       "source": [
@@ -458,7 +458,7 @@
           ]
         }
       ],
-      "execution_count": 33
+      "execution_count": 17
     },
     {
       "metadata": {
@@ -472,10 +472,10 @@
     {
       "metadata": {
         "id": "1S0WN2Y2BjTD",
-        "outputId": "156b4746-c56f-4b73-e28f-46c60904c7d3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2dd461c6-d8c7-42b1-fe79-3adbe20e8825"
       },
       "cell_type": "code",
       "source": [
@@ -492,7 +492,7 @@
           ]
         }
       ],
-      "execution_count": 45
+      "execution_count": 18
     },
     {
       "metadata": {
@@ -548,6 +548,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# New Section"
+      ],
+      "metadata": {
+        "id": "ofLUc8szRbDJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Coding Activity 1"
       ],
       "metadata": {
@@ -564,7 +573,7 @@
         "your_mental_model=[0.2, 0.346, 0.2, 0.09, 0.001, 0.16, 0.002, 0.001]"
       ],
       "outputs": [],
-      "execution_count": 50
+      "execution_count": 9
     },
     {
       "cell_type": "markdown",
@@ -585,7 +594,7 @@
         "your_mental_model=[0.05, 0.046, 0.09, 0.05, 0.001, 0.76, 0.002, 0.001]"
       ],
       "outputs": [],
-      "execution_count": 51
+      "execution_count": 10
     },
     {
       "cell_type": "markdown",
@@ -606,7 +615,8 @@
         "TbCry1ll6L9g",
         "4NJgcGxO6UDE",
         "AYxczrMh8weO"
-      ]
+      ],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
